--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 </main>
 
 <footer>Feito por Nawany Stéfany Magalhães @2023</footer>
-
+                
+<script src="index.js"></script>
 </body>
 
 </html>
